--- a/js-teme/public/css/top.css
+++ b/js-teme/public/css/top.css
@@ -3,11 +3,6 @@ body {
     font-family: Arial, sans-serif;
 }
 
-.container {
-    display: flex;
-    height: 100vh;
-}
-
 .sidebar {
     position: fixed;
     top: 90px;
@@ -17,9 +12,9 @@ body {
     flex-direction: column;
     align-items: center;
     padding: 20px 0;
+    height: 80%;
+    z-index: -1;
 }
-
-
 
 .recommended-communities {
     width: 100%;
@@ -61,10 +56,12 @@ body {
 }
 
 .menu-icons {
+    position:absolute;
     padding: 10px;
     width: 100%;
     display: flex;
     justify-content: space-around;
+    bottom: 0%;
 }
 
 .icon {
@@ -74,7 +71,6 @@ body {
 
 .main-content {
     flex: 1;
-    background-color: #fff;
     padding: 20px;
 }
 
@@ -82,7 +78,6 @@ body {
     display: flex;
     flex-direction: column;
     margin-left: 28%;
-    margin-top: 90px;
 }
 
 .post {
@@ -126,3 +121,76 @@ body {
 .post-content p {
     margin: 0;
 }
+
+.plus-button {
+    position: fixed;
+    bottom: 20px;
+    left: 90%;
+    background-color: #00fff2;
+    border: none;
+    color: white;
+    padding: 15px;
+    border-radius: 50%;
+    font-size: 24px;
+    cursor: pointer;
+    height: 50px;
+    width: 50px;
+    text-align: center;
+    
+}
+
+
+
+#post-content{
+    width: 700px;
+    font-size: 20px;
+        border: none;
+        resize: none;
+        outline: none;
+}
+
+#hidn{
+    display: none;
+}
+
+#preview{
+    border: none;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 100; /* z-indexを高く設定 */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    padding-top: 60px;
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 5% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+}
+
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
