デザイン修正完了

--- a/js-teme/public/css/header.css
+++ b/js-teme/public/css/header.css
@@ -1,19 +1,18 @@
 body {
-  font-family: serif;
-  font-size: 16px;
-  line-height: 1.6;
-  color: #000;
   margin: 0;
-  padding: 0;
+  font-family: Arial, sans-serif;
 }
-.layout{
+
+.layout {
   position: fixed;
   width: 100%;
-  top: 0%;
+  top: 0;
 }
-.main{
+
+.main {
   margin-top: 100px;
 }
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -70,55 +69,72 @@ body {
   cursor: pointer;
 }
 
-.modal {
-  display: none;
+.sidebar {
   position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  overflow: auto;
-  background-color: rgba(0,0,0,0.5);
-}
-
-.modal-content {
+  top: 90px;
+  width: 320px;
   background-color: #f4f4f4;
-  margin: 10% auto;
-  width: 60%;
-  padding: 20px;
-  box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2), 0 7px 20px 0 rgba(0,0,0,0.17);
-  animation-name: modalopen;
-  animation-duration: 1s;
-}
-
-@keyframes modalopen {
-  from {opacity: 0}
-  to {opacity: 1}
-}
-
-.modal-header {
-  background: lightblue;
-  padding: 10px;
   display: flex;
-  justify-content: flex-end;
+  flex-direction: column;
   align-items: center;
+  padding: 20px 0;
+  height: 80%;
 }
 
-.modalClose {
-  font-size: 2rem;
+.recommended-communities {
+  width: 100%;
+  padding: 0 20px;
+}
+
+.recommended-communities h2 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.recommended-communities ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.recommended-communities li {
+  display: flex;
+  align-items: center;
+  background: #fff;
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.community-icon {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.members-count {
+  margin-left: auto;
+  font-size: 12px;
+  color: #888;
+}
+
+/* .menu-icons {
+  position: absolute;
+  padding: 10px;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  bottom: 0;
+}
+
+.icon {
+  font-size: 24px;
   cursor: pointer;
 }
 
-.modal-body {
-  padding: 10px 20px;
-  color: black;
-}
-#particleCanvas{
-  position: fixed;
-  z-index: -10;
-}
-#modalOpenInner{
-  position: relative;
-  left: 90%;
-}
+.main-content {
+  flex: 1;
+  padding: 20px;
+} */
