デザイン修正

--- a/js-teme/public/css/top.css
+++ b/js-teme/public/css/top.css
@@ -133,7 +133,8 @@
 .topic:hover {
     transform: scale(1.1);
 }
-.search{
-    height: 30px;
-    width: 550px;
+.timeline{
+
+    height: 400px;
+    overflow: auto;
 }
