--- a/js-teme/public/css/header.css
+++ b/js-teme/public/css/header.css
@@ -120,7 +120,7 @@ body {
   color: #888;
 }
 
-/* .menu-icons {
+.menu-icons {
   position: absolute;
   padding: 10px;
   width: 100%;
@@ -137,4 +137,20 @@ body {
 .main-content {
   flex: 1;
   padding: 20px;
-} */
+}
+.search2{
+  height: 35px;
+  outline: none;
+  width: 300px;
+  border:solid#ff00fb 1px;
+  border-radius: 10px;
+}
+.button{
+  position: relative;
+  right: 50px;
+  border: solid#ff00fb 1px;
+}
+select{
+  border:solid#ffa640 1px;
+  outline: none;
+}
