--- a/js-teme/public/css/achieve.css
+++ b/js-teme/public/css/achieve.css
@@ -1,3 +1,17 @@
 .achieve{
     margin-left: 50%;
+    margin-top: 20px;
+}
+textarea{
+    resize: none;
+    width: 300px;
+    height:200px;
+}
+.point{
+    margin-top: 110px;
+    margin-left: 45%;
+}
+.point2{
+    margin-top: 20px;
+    margin-left: 40%;
 }
