--- a/js-teme/public/css/top.css
+++ b/js-teme/public/css/top.css
@@ -154,7 +154,7 @@ button {
     border-radius: 5px; /* 角丸をつける */
     padding: 10px 15px; /* ボタンの内側の余白 */
     margin: 5px; /* ボタン同士の余白 */
-    background-color: #a83ba6; /* ボタンの背景色 */
+    background-color: #ff5efc; /* ボタンの背景色 */
     color: white; /* ボタンの文字色 */
     text-align: center; /* ボタンのテキストを中央揃えにする */
     text-decoration: none; /* テキストに下線をつけない */
